# behavior_cloning

./: CMakeLists.txt  package.xml  readme.txt
data/: cam_calib.txt  localize.txt  odom_polygon.txt  odoms_pol.txt  setpoints.txt  square.txt  traPolygon.txt
data/calibrationdata/: ost.txt  ost.yaml
launch/: turtle_astra_ar.launch
scripts/: KF_update.py  SLAM.py  follow_rect.py  go_follower.py  go_leader.py  go_to_specific_point_on_map.py  hough.ipynb  pid.py  sim.py  test_traj.py  turtle_follower.py  turtle_leader.py
test_scripts/: hough.ipynb  sim.py  test_odom_traj.py  test_traj.py
