<?xml version="1.0"?>
<package>
  <name>behavior_cloning</name>
  <version>0.0.0</version>
  <description>The behavior_cloning package</description>
  <maintainer email="islam034@umn.edu">irvlab</maintainer>
  <license>MIT</license>


  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export> </export>
</package>
